最终版，需添加github文件床

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "",
-  "appid": "",
+  "name": "TLK",
+  "appid": "H51EEB445",
   "description": "",
   "versionName": "1.0.0",
   "versionCode": "100",
