--- a/package.json
+++ b/package.json
@@ -57,12 +57,16 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-3090920231225001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3090920231225001",
     "@iconify-json/mdi": "^1.1.64",
+    "@types/uuid": "^9.0.8",
     "@uni-helper/uni-network": "^0.18.1",
     "@uni-helper/uni-promises": "^0.2.1",
     "@uni-helper/uni-use": "^0.19.9",
     "@vueuse/core": "9.13.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "pinia": "2.0.36",
     "uuid": "^9.0.1",
+    "vconsole": "^3.15.1",
     "vue": "3.2.47",
     "vue-i18n": "9.9.0",
     "wot-design-uni": "^1.1.9"
