--- a/package.json
+++ b/package.json
@@ -42,41 +42,41 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-3090920231225001",
-    "@dcloudio/uni-app-plus": "3.0.0-3090920231225001",
-    "@dcloudio/uni-components": "3.0.0-3090920231225001",
-    "@dcloudio/uni-h5": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-jd": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-lark": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-qq": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-3090920231225001",
-    "@dcloudio/uni-mp-xhs": "3.0.0-3090920231225001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-3090920231225001",
+    "@dcloudio/uni-app": "3.0.0-4000720240327002",
+    "@dcloudio/uni-app-plus": "3.0.0-4000720240327002",
+    "@dcloudio/uni-components": "3.0.0-4000720240327002",
+    "@dcloudio/uni-h5": "3.0.0-4000720240327002",
+    "@dcloudio/uni-mp-alipay": "3.0.0-4000720240327002",
+    "@dcloudio/uni-mp-baidu": "3.0.0-4000720240327002",
+    "@dcloudio/uni-mp-jd": "3.0.0-4000720240327002",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-4000720240327002",
+    "@dcloudio/uni-mp-lark": "3.0.0-4000720240327002",
+    "@dcloudio/uni-mp-qq": "3.0.0-4000720240327002",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-4000720240327002",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4000720240327002",
+    "@dcloudio/uni-mp-xhs": "3.0.0-4000720240327002",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-4000720240327002",
     "@iconify-json/mdi": "^1.1.64",
+    "@types/pdfmake": "^0.2.9",
     "@types/uuid": "^9.0.8",
     "@uni-helper/uni-network": "^0.18.1",
     "@uni-helper/uni-promises": "^0.2.1",
     "@uni-helper/uni-use": "^0.19.9",
     "@vueuse/core": "9.13.0",
     "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
     "pinia": "2.0.36",
     "uuid": "^9.0.1",
     "vconsole": "^3.15.1",
-    "vue": "3.2.47",
+    "vue": "3.4.21",
     "vue-i18n": "9.9.0",
     "wot-design-uni": "^1.1.9"
   },
   "devDependencies": {
     "@dcloudio/types": "3.4.1",
-    "@dcloudio/uni-automator": "3.0.0-3090920231225001",
-    "@dcloudio/uni-cli-shared": "3.0.0-3090920231225001",
-    "@dcloudio/uni-stacktracey": "3.0.0-3090920231225001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-3090920231225001",
+    "@dcloudio/uni-automator": "3.0.0-4000720240327002",
+    "@dcloudio/uni-cli-shared": "3.0.0-4000720240327002",
+    "@dcloudio/uni-stacktracey": "3.0.0-4000720240327002",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4000720240327002",
     "@iconify-json/carbon": "^1.1.31",
     "@iconify-json/tabler": "^1.1.107",
     "@types/node": "^20.11.26",
@@ -91,7 +91,7 @@
     "@uni-helper/vite-plugin-uni-pages": "^0.2.15",
     "@uni-helper/vite-plugin-uni-platform": "^0.0.4",
     "@uni-helper/vite-plugin-uni-platform-modifier": "^0.0.2",
-    "@vue/runtime-core": "3.3.7",
+    "@vue/runtime-core": "3.4.21",
     "@vue/tsconfig": "^0.5.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
@@ -100,7 +100,7 @@
     "sass": "1.64.2",
     "typescript": "^5.4.2",
     "unocss": "^0.58.5",
-    "vite": "4.0.3",
+    "vite": "4.3.5",
     "vue-eslint-parser": "^9.4.2",
     "vue-tsc": "^2.0.6"
   }
